# singIT

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
backend/: .env.example  Cargo.toml  example.env
backend/migrations/2023-09-21-174215_add_song_table/: down.sql  up.sql
backend/migrations/2023-09-21-202738_add_custom_lists/: down.sql  up.sql
backend/mock/: custom_lists.sql  songs.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs  route.rs  schema.rs  serialize.rs  util.rs
backend/src/route/: auth.rs  custom_list.rs
backend/tests/foobar/: main.rs
frontend/: Cargo.toml  build.rs  index.html
frontend/src/: app.rs  category.rs  css.rs  custom_list.rs  fetch.rs  main.rs  query.rs  song.rs
frontend/static/: manifest.json
frontend/static/styles/: common.scss
lib/: Cargo.toml
lib/src/: lib.rs
request_macro/: Cargo.toml
request_macro/src/: lib.rs
src/: app.rs  css.rs  custom_list.rs  fetch.rs  fuzzy.rs  lib.rs  main.rs  query.rs  song.rs
static/styles/: common.scss  marquee.scss
ultrascraper/: Cargo.toml  todo.md
ultrascraper/src/: main.rs
