[package]
name = "singit2"
version = "0.2.0"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
#wasm-bindgen = "0.2.70"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
anyhow = "*"
rand = "0.8.4"

[dependencies.css_typegen]
git = "https://github.com/hulthe/css_typegen.git"
branch = "master"
