[package]
name = "singit2"
version = "0.2.2"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
edition = "2021"

[dependencies]
seed = "0.10.0"
serde = { version = "1.0.0", features = ['derive'] }
serde_json = "1.0.0"
rand = "0.8.5"
gloo-console = "0.3.0"
gloo-net = "0.4.0"
csv = "1.2.2"
thiserror = "1.0.48"
wasm-bindgen = "0.2.87"

[dependencies.css_typegen]
git = "https://github.com/hulthe/css_typegen.git"
branch = "master"
