[package]
name = "singit_srv"
version = "1.0.2"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", default-features = false, features = ["macros"] }
clap = { version = "4.4.4", features = ["derive", "env"] }
diesel = "2.1.1"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "std"] }
