[package]
name = "singit_srv"
version = "1.2.0"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
edition = "2021"

[[bin]]
name = "singit_srv"

[dependencies]
singit_lib = { path = "../lib" }
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-utils = "3.0.1"
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
clap = { version = "4.4.4", features = ["derive", "env"] }
diesel = { version = "2.2.4", features = ["postgres", "postgres_backend"] }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.115"
gamma_rust_client = { git = "https://github.com/cthit/Gamma.git", rev = "86a735e2c7f56cb854fe60e3aff789243f0eb6c7" }
csv = "1.3.0"
futures = "0.3.31"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
