[package]
name = "ultrascraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive", "env"] }
eyre = "0.6.8"
md5 = "0.7.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.32.0", features = ["rt", "fs", "macros", "sync", "io-util"] }
serde_json = "1"
serde = { version = "1.0.193", features = ["derive"] }
rust-fuzzy-search = "0.1.1"
